Fixed the z-index of the social buttons

--- a/app.css
+++ b/app.css
@@ -49,6 +49,7 @@ body {
   position: absolute;
   bottom: 0;
   left: 0;
+  z-index: 6;
   margin: 0;
   padding: 20px;
   align-items: center;
